fix vertical misalignment caused by fix spaces in the markup affecting the horizontal divider margin in Breadcrumb component

--- a/src/less/components/breadcrumb.less
+++ b/src/less/components/breadcrumb.less
@@ -51,9 +51,15 @@
 /* Items
  ========================================================================== */
 
+/*
+ * 1. Fix misalignment caused by `font-size: 0`
+ */
+
 .uk-breadcrumb > * > * {
     font-size: @breadcrumb-item-font-size;
     color: @breadcrumb-item-color;
+    /* 1 */
+    vertical-align: middle;
     .hook-breadcrumb-item();
 }
 
